Fix variable products options and add to cart form not wrapping on different lines

--- a/plugins/woocommerce/client/legacy/css/twenty-twenty-three.scss
+++ b/plugins/woocommerce/client/legacy/css/twenty-twenty-three.scss
@@ -315,10 +315,6 @@
 					font-size: 1em;
 				}
 			}
-
-			.quantity {
-				display: inline-block;
-			}
 		}
 
 		table.variations tr {
